# OmniRaw

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  exif.rs  lib.rs  main.rs  model.rs  preview.rs  protocol.rs  scanner.rs  state.rs  thumbs.rs
src-tauri/src/commands/: delete.rs  media.rs  mod.rs  scan.rs  settings.rs
src/api/: commands.ts  events.ts  imageUrl.ts
src/components/browse/: BrowseScreen.tsx  GridBrowser.tsx  StatusBadge.tsx
src/components/common/: ConfirmDialog.tsx  EmptyState.tsx  GroupThumb.tsx  MarkBadge.tsx  Spinner.tsx  Toasts.tsx
src/components/cull/: CullView.tsx  ExifPanel.tsx  Filmstrip.tsx  PreviewPane.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  StatusBar.tsx
src/components/orphans/: OrphanScreen.tsx
src/components/review/: ReviewScreen.tsx
src/components/settings/: ExtensionListEditor.tsx  SettingsScreen.tsx
src/components/welcome/: WelcomeScreen.tsx
src/hooks/: useGlobalHotkeys.ts  useOpenFolder.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  zh-TW.json
src/stores/: cullStore.ts  libraryStore.ts  settingsStore.ts  thumbStore.ts  toastStore.ts
src/styles/: app.css
src/utils/: marks.ts
