[package]
name = "omniraw"
version = "0.1.0"
description = "RAW/JPEG lifecycle-linked photo culling tool"
authors = ["Timmy"]
edition = "2021"

[lib]
name = "omniraw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"
# rawler API is unstable; pin exact version. All rawler usage stays inside preview.rs / exif.rs.
rawler = "=0.7.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff", "webp"] }
kamadak-exif = "0.6"
trash = "5"
rayon = "1"
blake3 = "1"
base64 = "0.22"
log = "0.4"
# canonicalize without Windows \\?\ verbatim prefixes
dunce = "1"

[dev-dependencies]
tempfile = "3"

# Image decoding is CPU-bound; unoptimized deps make dev thumbnails 5-20x
# slower than release. Optimize dependencies only — our own crate still
# compiles fast for the edit-rebuild loop.
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
